124) kernel: net: ipv6: add anti-spoofing checks for 6to4 and 6rd.<br>
125) kernel: net: ipv6: only apply anti-spoofing checks to not-pointopoint tunnels.<br>
126) kernel: net: ipv6: nat: do not drop DNATed 6to4/6rd packets.<br>
127) kernel: net: ipv6: remove redundant oif checks in rt6_device_match.<br>
128) kernel: net: ipv6: drop frames with attached skb->sk in forwarding.<br>
129) kernel: net: ipv6: protect mtu calculation of wrap-around and infinite loop by rounding issues.<br>
130) kernel: net: ipv6: recreate ipv6 link-local addresses when increasing MTU over IPV6_MIN_MTU.<br>
131) kernel: net: ipv6: fix a potential use after free in sit.c.<br>
132) kernel: net: ipv6: select fragment id during UFO segmentation if not set.<br>
133) kernel: net: ipv6: fix fragment id assignment on LE arches.<br>
134) kernel: net: ipv6: call ipv6_proxy_select_ident instead of ipv6_select_ident in udp6_ufo_fragment.<br>
135) kernel: net: ipv6: RTAX_FEATURE_ALLFRAG causes inefficient TCP segment sizing.<br>
136) kernel: net: ipv6: fix IPv6 UDP fragmentation issue.<br>
137) kernel: net: ipv6: nf_conntrack_ipv6: fix tracking of ICMPv6 error messages containing fragments.<br>
<br>
<br>
<b>3.7.x</b><br>
1) add 7621+7602+7612_USB_SD_SIM_16_512 metal sample support.<br>
<br>
<br>
<b>TODO:</b><br>
1) full russian ui (work end ~99%).<br>
2) need add subchannel select for 5GHz module.<br>
3) need review, experiments with new roaming code in MT76x2 driver, need add multiif support in iappd daemon and implement to WebUI.<br>
4) in very far future: need add in firewall support xt_time matches for parental control.<br>
5) in very far future: need add perip shaper script and webui .<br>
6) in very far future: need add scripts and webui for support 3g usb dongles uses qmi protocol.<br>
7) in very far future: port support l2tp/pptp hardware NAT offload (really needed? in sdk very ugly code).<br>
<br>
<br>
<br>